Fix classroom alignment issues

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -17,3 +17,7 @@ body {
     background-color: #F44336 !important;
     color: white;
 }
+
+.no-margin {
+    margin: 0 !important;
+}
